fix gaps

--- a/style.css
+++ b/style.css
@@ -24,12 +24,15 @@ body {
 
     #right-side {
       #nav {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
+        #title-nav {
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+        }
         ul {
           display: flex;
-          justify-content: space-between;
+          justify-content: space-evenly;
+          gap: 2em;
 
           li {
             list-style: none;
@@ -41,7 +44,7 @@ body {
           .link-green {
             background-color: #3ddc97;
             color: white;
-            border-radius: 50px;
+            border-radius: 40px;
             padding: 10px 20px;
             text-align: center;
             list-style: none;
@@ -53,7 +56,7 @@ body {
           .link-white {
             border: solid #3ddc97;
             color: #3ddc97;
-            border-radius: 50px;
+            border-radius: 40px;
             padding: 10px 20px;
             text-align: center;
             list-style: none;
@@ -75,6 +78,10 @@ body {
           h1 {
             color: #3ddc97;
           }
+          .btn {
+            border: solid gainsboro;
+            border-radius: 40px;
+          }
         }
       }
       #cards {
@@ -93,17 +100,24 @@ body {
               color: #3ddc97;
             }
             .white-contain {
-              padding: 2em;
+              padding: 1em;
               border-radius: 5%;
               background-color: #e2f8ef;
+              div {
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 1em;
+              }
             }
             .green-contain {
-              padding: 2em;
+              padding: 1em;
               border-radius: 5%;
               border: solid #3ddc97;
               div {
                 display: flex;
                 justify-content: center;
+                align-items: flex-start;
                 gap: 1em;
               }
             }
@@ -120,6 +134,20 @@ body {
         p,
         #fleche {
           display: none;
+        }
+      }
+    }
+    main {
+      display: flex;
+      flex-direction: column-reverse;
+
+      #right-side {
+        #nav img {
+          display: none;
+        }
+        #nav ul {
+          display: flex;
+          flex-direction: column;
         }
       }
     }
